# Devops-Assistant

./: .gitignore  docker-compose.yml  final_project_cleanup.ps1  pyproject.toml  requirements.txt  test_configuration.py  test_db.py  test_env_loading.py  test_supabase_client.py  test_supabase_methods.py
app/: database.py  main.py
app/config/: settings.py
app/services/: database.py  supabase.py
infrastructure/vector/: vector.yaml
scripts/: cleanup.py  db_verify.py  init_db.py
scripts/powershell/: dir_structure.ps1  project_cleanup.ps1  ultimate_cleanup.ps1
src/: main.py
supabase/: config.toml
venv_new/: pyvenv.cfg
venv_new/Scripts/: activate  activate.bat
